[package]
name = "pmbus"
version = "0.1.0"
authors = ["Bryan Cantrill <bryan@oxide.computer>"]
edition = "2021"
license = "MPL-2.0"

[profile.ci]
inherits = "dev"
debug = false # default true

[build-dependencies]
ron = "0.8"
serde = "1.0.164"
serde_with = "1.14.0"

anyhow = "1.0.71"
convert_case = "0.6.0"

[dependencies]
num-traits = { version = "0.2.15", default-features = false }
num-derive = "0.3.3"
libm = "0.2.7"
